--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: messenger app
 
 publish_to: "none"
 
-version: 1.0.2+7
+version: 1.0.0+1
 
 environment:
   sdk: ">=3.0.5 <4.0.0"
@@ -11,11 +11,11 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
-  dio: ^5.3.2
+  dio:
   easy_localization:
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.3
+  flutter_bloc:
   fluttertoast: ^8.2.2
   freezed_annotation:
   get_it: ^7.6.0
@@ -25,8 +25,6 @@ dependencies:
   shared_preferences: ^2.2.0
   styled_widget: ^0.4.1
   auto_route: ^5.0.0
-  awesome_notifications_core: 0.8.1
-  awesome_notifications: 0.8.2
   flutter_svg: ^2.0.7
   image_picker: ^0.8.6
   cached_network_image: ^3.2.3
@@ -45,19 +43,16 @@ dependencies:
   share_plus: ^7.1.0
   flutter_dialogs: ^3.0.0
   geolocator: ^11.1.0
-
-dependency_overrides:
-  intl: ^0.18.1
+  firebase_vertexai: ^0.1.1
 
 dev_dependencies:
-  isar_generator: ^3.1.0+1
+  analyzer:
+  isar_generator:
   auto_route_generator:
   build_runner:
   flutter_launcher_icons: ^0.13.1
   flutter_lints:
   flutter_native_splash: ^2.4.0
-  flutter_test:
-    sdk: flutter
   freezed:
   injectable_generator:
   logger:
@@ -68,7 +63,6 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/translations/
-    - assets/sounds/
   fonts:
     - family: Poppins
       fonts:
